--- a/src/app/hotel-list/hotel-list.component.html
+++ b/src/app/hotel-list/hotel-list.component.html
@@ -25,7 +25,7 @@
             <div class="card-body">
             <h5 class="card-title">{{hotel.nom | uppercase}}</h5>
             <p class="card-text justify-content">{{hotel.description }}</p>
-            <h5 class="card-text" *ngIf="hotel.prix !=null ">Prix: {{hotel.prix | currency: "EUR" :"1.2-2" }}</h5>
+            <h5 class="card-text" *ngIf="hotel.prix !=null ">Prix: {{hotel.prix | currency: "EUR" }}</h5>
             <a href="#" class="btn btn-primary" *ngIf="bool">Voir plus...</a>
             </div>
         </div>
