--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,20 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Bienvenue sur {{title}}</h1>
-
-  <app-hotel-list></app-hotel-list>
+  <!--<h1>Bienvenue sur {{title}}</h1>-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <a class="navbar-brand text-color" [routerLink]="['']">{{title}}</a>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav nav-item">
+          <a class="nav-link text-color" [routerLink]="['/home']">Accueil</a>
+          <a class="nav-link text-color" [routerLink]="['/hotels']">Liste hotels</a>
+      </div>
+    </div>
+  </nav>
+  <div class="mt-3">
+    <router-outlet></router-outlet>
+  </div>
+  <!--<app-hotel-list></app-hotel-list>-->
  
   
 </body>
